2009-01-20  Frank Warmerdam  <warmerdam@pobox.com>

	* tools/tiffsplit.c: fix sampleformat to be shortv instead of longv.

2009-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tools/tiff2ps.c: Remove spurious message printed to stderr. 

2009-01-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tools/tiff2ps.c: Incorporated significant functionality update
	from Richard Nolde.  In particular, support for rotating the image
	by 90, 180, 270, and 'auto' has been added.

	* tools/tiffcrop.c: Incorporated significant functionality update
	from Richard Nolde.

2009-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtiff/tiffiop.h: Add private type declarations for int64, and
	uint64 so that bundled utilities (like tiffcrop) can use it when
	necessary.

2009-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Updated to test for 64-bit types.  This version of
	the library does not require a 64-bit type, but tiffcrop needs it.

2008-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Update to use current FSF autotools versions.
	* libtiff/tiffio.h: GCC will now validate format specifications
	for TIFFError(), TIFFErrorExt(), TIFFWarning(), and
	TIFFWarningExt() in order to reveal bugs.  Cleaned up resulting
	warnings throughout for 32 bit build only.

2008-12-31  Frank Warmerdam  <warmerdam@pobox.com>

	* tools/tiffcrop.c, man/tiffcrop.1: A major update from Richard
	Nolde.  

2008-12-21  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_jpeg.c: Avoid errors if the application writes a full
	strip for the last partial strip in a jpeg compressed file.
	http://bugzilla.maptools.org/show_bug.cgi?id=1981

2008-12-21  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_getimage.c, tiffio.h: More ABI corrections. 
	Removed SubsamplingHor/Ver from TIFFRGBAImage structure.
	  http://bugzilla.maptools.org/show_bug.cgi?id=1980

2008-12-18  Frank Warmerdam  <warmerdam@pobox.com>
